# json_generator

./: README.md  pyproject.toml
examples/: together_ai_api.py
src/json_generator/: __init__.py  data_module.py  generate.py  utils.py
src/legal_queries_generator/: __init__.py  generate.py  input_prompt.py  utils.py
tests/: test_generate.py  test_input_model.py  test_output_model.py
