[project]
name = "legal-queries-generator"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "phamson02", email = "phamtienson02@gmail.com" }
]
dependencies = [
    "tenacity>=8.2.3",
    "tqdm>=4.66.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/legal_queries_generator"]
